...
    <string name="common_back">Back</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_close">Close</string>
    <string name="common_collapse">Hide details</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Delete</string>
    <string name="common_dismiss">Dismiss</string>
    <string name="common_edit">Edit</string>
    <string name="common_expand">Show details</string>
    <string name="common_loading">Loading…</string>
    <string name="common_refresh">Refresh</string>
    <string name="common_retry">Retry</string>
    <string name="common_save">Save</string>
    <string name="common_search">Search</string>
    <string name="error_account_disabled">This account is disabled.</string>
    <string name="error_account_expired">This account has expired.</string>
    <string name="error_account_locked">This account is locked.</string>
...
